# RoboFoot

./: LICENSE  README.md  Trabalho_Final.ipynb  pyproject.toml
robofoot_tracker/: __init__.py  calibration.py  color_config.py  detector.py  geometry.py  models.py  preprocessing.py  tracker.py  viz.py
